kustomizations/journal/journal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-app
  namespace: journal
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: journal
        image: ghcr.io/elifesciences/journal:latest
        ports:
        - containerPort: 9000
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /srv/journal/app/config/parameters.yml
          subPath: parameters.yaml
        - name: config-volume
          mountPath: /srv/journal/app/config/era_articles.yml
          subPath: era_articles.yaml
        - name: config-volume
          mountPath: /srv/journal/app/config/config_test.yml
          subPath: config_test.yaml
        - name: secret-parameters
          mountPath: /srv/journal/app/config/secret_parameters.yml
          subPath: secret_parameters.yaml
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx-site.conf
        - name: assets-volume
          mountPath: /srv/journal/web
        - name: error-assets-volume
          mountPath: /srv/error-pages/public/
      volumes:
      - name: config-volume
        configMap:
          name: journal-app-parameters
          items:
          - key: parameters.yaml
            path: parameters.yaml
          - key: era_articles.yaml
            path: era_articles.yaml
          - key: config_test.yaml
            path: config_test.yaml
      - name: secret-parameters
        secret:
          secretName: ${journal_secret_parameters_secret_name}
          items:
          - key: secret_parameters.yaml
            path: secret_parameters.yaml
      - name: nginx-config-volume
        configMap:
          name: nginx-journal-site-conf
          items:
          - key: nginx-site.conf
            path: nginx-site.conf

      - name: assets-volume
        emptyDir:
          sizeLimit: 500Mi
      - name: error-assets-volume
        emptyDir:
          sizeLimit: 50Mi
