kustomizations/journal/journal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
